syntax = "proto3";

package pt.ulisboa.ist.sirs.contract.databaseserver;

message Ack {
}

message AuthenticateRequest {
  bytes request = 1;
}

message AuthenticateResponse {
  bytes response = 1;
}

message StillAliveRequest {
  bytes request = 1;
}

message StillAliveResponse {
  bytes response = 1;
}

message CreateAccountRequest {
  repeated string names = 1;
  bytes password = 2;
  string timestamp = 3;
}

message DeleteAccountRequest {
  string name = 1;
  bytes password = 2;
  string timestamp = 3;
}

message BalanceRequest {
  string name = 1;
  bytes password = 2;
  string timestamp = 3;
}

message BalanceResponse {
  string amount = 1;
}

message GetMovementsRequest {
  string name = 1;
  bytes password = 2;
  string timestamp = 3;
}

message GetMovementsResponse {
  message Movement {
    string id = 1;
    string currency = 2;
    string date = 3;
    string value = 4;
    string description = 5;
  }
  repeated Movement movements = 1;
}

message OrderPaymentRequest {
  string name = 1;
  bytes password = 2;
  string date = 3;
  string amount = 4;
  string description = 5;
  string recipient = 6;
  string timestamp = 7;
}

service DatabaseService {
  rpc authenticate (AuthenticateRequest) returns (AuthenticateResponse);
  rpc stillAlive (StillAliveRequest) returns (StillAliveResponse);
  rpc createAccount (CreateAccountRequest) returns (Ack);
  rpc deleteAccount (DeleteAccountRequest) returns (Ack);
  rpc balance (BalanceRequest) returns (BalanceResponse);
  rpc getMovements (GetMovementsRequest) returns (GetMovementsResponse);
  rpc orderPayment (OrderPaymentRequest) returns (Ack);
}